# orientacion-escolar-v2

./: .gitignore
backend_rest/: .gitignore  pyproject.toml
backend_rest/backup_restore/: apps.py  urls.py  views.py
backend_rest/core/: settings.py  urls.py
backend_rest/editar_formulario/: apps.py  files_reader.py  models.py  serializers.py  tests.py  urls.py  views.py
backend_rest/editar_formulario/migrations/: 0001_initial.py  0002_editarcampos_nombreestudiante.py  0003_alter_editarcampos_municipio.py
backend_rest/registro_de_atencion/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend_rest/registro_de_atencion/migrations/: 0001_initial.py  0002_alter_registro_nombreestudiante.py  0002_registro_estudiante_snapshot_and_more.py  0003_remove_registro_form_data.py  0003_rename_espectativasentrevistado_registro_expectativasentrevistado.py
backend_rest/uploads/: estudiantes.xlsx  municipios.csv
frontend/: output.txt  package-lock.json  package.json  report.html  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: FilePreview.tsx  FilterModal.tsx  MainContent.tsx  PDFViewer.tsx  Sidebar.tsx  StudentDetail.tsx  StudentList.tsx  UpcomingEvents.tsx
frontend/config/: api.ts
frontend/contexts/: EstudiantesContext.ts
frontend/hooks/: useEstudiantes.ts
frontend/lib/: RegistrosContext.tsx  StudentsContext.tsx
frontend/providers/: EstudiantesProvider.tsx
frontend/src-tauri/: tauri.conf.json
frontend/stores/: formSectionsStore.ts
frontend/types/: Estudiante.ts  Form.ts  file.ts  index.ts  (+1 more)
(+110 files in other folders)
