[project]
name = "backend-rest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.5.0",
    "django>=5.1.2",
    "djangorestframework>=3.15.2",
    "pandas>=2.2.3",
]


[tool.ruff]

line-length = 120
